--- a/.config/polybar/i3/config.ini
+++ b/.config/polybar/i3/config.ini
@@ -18,15 +18,15 @@ font-6 = Fira Sans:size=8;2
 font-7 = OpenDyslexic Nerd Font:size=13;3
 
 
-[bar/top]
+[bar/bottom]
 inherit = bar/main
 width = 100%
 height = 20px
-bottom = false
+bottom = true
 background = ${colors.transparent}
 modules-center = mpdsong
 
-[bar/bottom]
+[bar/top]
 inherit = bar/main
 width = 100%
 height = 24px
