--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -168,7 +168,7 @@ type = custom/text
 content = 󰹯
 content-foreground = ${macchiato.Peach} 
 content-background = ${colors.background}
-click-left = "~/polybarsh/mpcmenu.sh"
+click-left = "~/scripts/mpcmenu.sh"
 
 
 [module/polycat]
