--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -160,7 +160,7 @@ type = custom/text
 content-padding = 2
 content = 
 content-background = ${colors.background}
-click-left = "cat .config/jgmenu/pwrmenu | jgmenu --simple --center --icon-size=24"
+click-left = "cat .config/jgmenu/menus/pwrmenu | jgmenu --simple --center --icon-size=24"
 
 [module/mpcmenu]
 type = custom/text
