--- a/.config/polybar/edges.ini
+++ b/.config/polybar/edges.ini
@@ -1,7 +1,7 @@
 [module/sep0]
 type = custom/text
 format = 
-format-foreground = ${macchiato.Ovelay1}
+format-foreground = ${macchiato.Overlay1}
 format-background = ${colors.background}
 
 [module/sep1]
