--- a/.config/polybar/i3/config.ini
+++ b/.config/polybar/i3/config.ini
@@ -11,8 +11,8 @@ height = 1px
 font-0 = UbuntuSans Nerd Font:size=12;3
 font-1 = polycat;2
 font-2 = UbuntuSans Nerd Font:size=8;2
-font-3 = FantasqueSansM Nerd Font:size=8;2
-font-4 = Symbols Nerd Font Mono:size=22;4
+font-3 = FiraMono Nerd Font:size=8;2
+font-4 = Symbols Nerd Font Mono:size=20;3
 font-5 = Symbols Nerd Font:size=16;4
 font-6 = Fira Sans:size=8;2
 font-7 = OpenDyslexic Nerd Font:size=13;3
