--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -180,7 +180,7 @@ font = 9
 [module/mpdsong]
 type = internal/mpd
 interval = 5
-format-online = %{F#91d7e3}%{T5}%{F- T}<label-song>%{F#91d7e3}%{T5}%{F- T}
+format-online = %{F#91d7e3}%{T5}%{F- T}<label-song>%{F#91d7e3}%{T5}%{F- T}
 label-song =  %{T4} %artist% - %title% %{T-}
 label-song-background = ${macchiato.Sky}
 label-song-foreground = ${mocha.Crust}
