--- a/.config/polybar/bspwm/config.ini
+++ b/.config/polybar/bspwm/config.ini
@@ -12,7 +12,7 @@ font-0 = UbuntuSans Nerd Font:size=12;3
 font-1 = polycat;2
 font-2 = UbuntuSans Nerd Font:size=8;2
 font-3 = FantasqueSansM Nerd Font:size=8;2
-font-4 = Symbols Nerd Font Mono:size=22;4
+font-4 = Symbols Nerd Font Mono:size=22;3
 font-5 = Symbols Nerd Font:size=16;4
 font-6 = Fira Sans:size=8;2
 font-7 = OpenDyslexic Nerd Font:size=13;3
@@ -21,7 +21,7 @@ font-7 = OpenDyslexic Nerd Font:size=13;3
 [bar/bottom]
 inherit = bar/main
 width = 100%
-height = 20px
+height = 24px
 bottom = true
 background = ${colors.transparent}
 modules-center = mpdsong
@@ -58,5 +58,5 @@ enable-ipc = true
 cursor-click = pointer
 
 [settings]
-screenchange-reload = false
-pseudo-transparency = false
+screenchange-reload = true
+pseudo-transparency = true
