--- a/.config/polybar/i3/config.ini
+++ b/.config/polybar/i3/config.ini
@@ -11,9 +11,9 @@ height = 1px
 font-0 = UbuntuSans Nerd Font:size=12;3
 font-1 = polycat;2
 font-2 = UbuntuSans Nerd Font:size=8;2
-font-3 = FiraMono Nerd Font:size=8;2
-font-4 = Symbols Nerd Font Mono:size=20;3
-font-5 = Symbols Nerd Font:size=16;4
+font-3 = Monofur Nerd Font:size=8;2
+font-4 = Symbols Nerd Font Mono:size=18;4
+font-5 = Symbols Nerd Font Mono:size=15;3
 font-6 = Fira Sans:size=8;2
 font-7 = OpenDyslexic Nerd Font:size=13;3
 
@@ -51,7 +51,7 @@ line-size = 3
 background = ${colors.transparent}
 foreground = ${macchiato.Text}
 
-modules-left = mainmenu sep0 mpcmenu sep1 mpd redge
+modules-left = mainmenu sep0 mpcmenu sep1 mpd mpcvol redge
 modules-center = ledge i3ws redge
 modules-right = ledge temperature cpu memory wifi sep1 pavol systray sep0 time sep0 pwrmenu
 enable-ipc = true
