--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -26,7 +26,7 @@ enable-scroll = false
 icon-default = 
 ;;label-active = 
 label-active = 󰮯
-label-active-padding = 1
+label-active-padding = 
 label-active-foreground = ${latte.Yellow}
 label-active-background = ${colors.background}
 ;;label-occupied = 
@@ -36,7 +36,7 @@ label-occupied-background = ${colors.background}
 label-occupied-foreground = ${latte.Pink}
 label-empty = %icon%
 label-empty-foreground = ${macchiato.Overlay2}
-rabel-empty-padding = 1
+label-empty-padding = 1
 label-empty-background = ${colors.background}
 
 [module/i3ws]
@@ -56,7 +56,7 @@ label-occupied-background = ${colors.background}
 label-occupied-foreground = ${mocha.Maroon}
 label-empty = %icon%
 label-empty-foreground = ${macchiato.Overlay2}
-rabel-empty-padding = 1
+label-empty-padding = 1
 label-empty-background = ${colors.background}
 label-urgent = 󰗖%{T3}%name%%{T-}
 label-urgent-foreground = ${latte.Red}
@@ -66,7 +66,7 @@ label-urgent-padding = 1
 [module/memory]
 type = internal/memory
 interval = 4
-format = <label>%{F#f4dbd6}%{B#11111b}%{T5}%{F- B- T-}
+format = <label>%{F#f4dbd6}%{B#11111b}%{T6}%{F- B- T-}
 format-foreground = ${mocha.Base}
 ;format-background = ${colors.yellow}
 ;format-padding = 6px
@@ -117,7 +117,7 @@ base-temperature = 10
 warn-temperature = 64
 units = true
 
-format = %{B#11111b}%{F#c6a0f6}%{T5}%{B- F- T}<label>
+format = %{B#11111b}%{F#c6a0f6}%{T6}%{B- F- T}<label>
 ;format-foreground = ${colors.crust}
 format-overline = ${colors.background}
 format-underline = ${colors.background}
@@ -148,28 +148,49 @@ ramp-foreground = ${colors.background}
 
 [module/mainmenu]
 type = custom/text
-content-padding = 2
-content = 
-content-foreground = ${latte.Sapphire}
-content-background = ${colors.background}
+format-padding = 2
+format = 
+format-foreground = ${latte.Sapphire}
+format-background = ${colors.background}
 click-left = "rofi -show drun -config ~/.config/rofi/themes/whisker.rasi"
 ;click-left = "jgmenu_run"
 
 [module/pwrmenu]
 type = custom/text
-content-padding = 2
-content = 
-content-background = ${colors.background}
+format-padding = 2
+format = 
+format-background = ${colors.background}
 click-left = "cat .config/jgmenu/menus/pwrmenu | jgmenu --simple --center --icon-size=24"
 
 [module/mpcmenu]
 type = custom/text
-;content-padding = 1pt
-content = 󰹯
-content-foreground = ${macchiato.Peach} 
-content-background = ${colors.background}
+;format-padding = 1pt
+format = 󰹯
+format-foreground = ${macchiato.Peach} 
+format-background = ${colors.background}
 click-left = "~/scripts/mpcmenu.sh"
 
+[module/mpcvol]
+type = custom/menu
+expand-right = true
+label-open = 󰕾
+label-open-foreground = ${macchiato.Green} 
+label-open-background = ${colors.background}
+label-close = 󰳞
+label-close-background = ${colors.background}
+label-separator = |
+label-separator-foreground = ${colors.background}
+label-separator-background = ${colors.background}
+
+menu-0-0 = -
+menu-0-0-exec = mpc volume -5
+menu-0-0-background = ${colors.background}
+
+menu-0-1 = +
+menu-0-1-exec = mpc volume +5
+menu-0-1-background = ${colors.background}
+
+;click-left = "~/scripts/mpcvol.sh"
 
 [module/polycat]
 type = custom/script
@@ -225,8 +246,8 @@ icon-repeatone = 󰑘
 icon-single = 󰲡
 icon-consume = ✀
 
-bar-progress-width = 35
-bar-progress-indicator = %{T4}%{T-}
+bar-progress-width = 30
+bar-progress-indicator = %{T3}%{T-}
 bar-progress-fill = %{T4}󱘹%{T-}
 bar-progress-fill-foreground = ${macchiato.Sapphire}
 bar-progress-empty = %{T4}󱘹%{T-}
