--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -81,7 +81,7 @@ type = internal/cpu
 interval = 2
 format = <label>
 format-foreground = ${mocha.Base}
-format-background = ${macchiato.Pink}
+format-background = ${macchiato.Flamingo}
 format-padding = 8px
 label =  %{T4}%percentage%%%{T-}
 format-overline = ${colors.background}
@@ -117,7 +117,7 @@ base-temperature = 10
 warn-temperature = 64
 units = true
 
-format = %{B#11111b}%{F#c6a0f6}%{T6}%{B- F- T}<label>
+format = %{B#11111b}%{F#ee99a0}%{T6}%{B- F- T}<label>
 ;format-foreground = ${colors.crust}
 format-overline = ${colors.background}
 format-underline = ${colors.background}
@@ -128,7 +128,7 @@ format-warn = %{B#11111b}%{F#ed8796}%{T5}%{B- F- T}<label-warn>
 ;fornat-warn-underline = ${colors.background}
 
 label = %{T4}%temperature-c%%{T-}
-label-background = ${macchiato.Mauve}
+label-background = ${macchiato.Maroon}
 label-foreground = ${mocha.Base}
 label-padding = 6px
 label-warn = %{T4}%temperature-c% %{T-}
@@ -150,7 +150,7 @@ ramp-foreground = ${colors.background}
 type = custom/text
 format-padding = 2
 format = 
-format-foreground = ${latte.Sapphire}
+format-foreground = ${latte.Flamingo}
 format-background = ${colors.background}
 click-left = "rofi -show drun -config ~/.config/rofi/themes/whisker.rasi"
 ;click-left = "jgmenu_run"
@@ -163,33 +163,47 @@ format-background = ${colors.background}
 click-left = "cat .config/jgmenu/menus/pwrmenu | jgmenu --simple --center --icon-size=24"
 
 [module/mpcmenu]
-type = custom/text
-;format-padding = 1pt
-format = 󰹯
-format-foreground = ${macchiato.Peach} 
-format-background = ${colors.background}
-click-left = "~/scripts/mpcmenu.sh"
-
-[module/mpcvol]
 type = custom/menu
 expand-right = true
-label-open = 󰕾
-label-open-foreground = ${macchiato.Green} 
+label-open = 󰹯
+label-open-foreground = ${macchiato.Peach} 
 label-open-background = ${colors.background}
-label-close = 󰳞
+label-close =  
 label-close-background = ${colors.background}
-label-separator = |
-label-separator-foreground = ${colors.background}
-label-separator-background = ${colors.background}
+label-padding = 1
 
-menu-0-0 = -
-menu-0-0-exec = mpc volume -5
+menu-0-0 =  %{T3}Menu%{T-}
+menu-0-0-exec = "~/scripts/mpcmenu.sh"
 menu-0-0-background = ${colors.background}
+menu-0-0-foreground = ${macchiato.Blue}
+menu-0-0-padding = 1
 
-menu-0-1 = +
-menu-0-1-exec = mpc volume +5
+menu-0-1 = %{T3}Start%{T-}
+menu-0-1-exec = mpd
+menu-0-1-foreground = ${macchiato.Teal}
 menu-0-1-background = ${colors.background}
+menu-0-1-padding = 1
 
+menu-0-2 = %{T3}Quit%{T-}
+menu-0-2-exec = mpd --kill
+menu-0-2-background = ${colors.background}
+menu-0-2-foreground = ${macchiato.Red}
+menu-0-2-padding = 1
+
+[module/mpcvol]
+type = custom/script
+interval = 2
+format = 󰕾<label>
+format-foreground = ${macchiato.Yellow}
+format-background = ${colors.background}
+click-left = mpc volume +5
+click-right = mpc volume -5
+;scroll-up = mpc volume +1
+;scroll-down = mpc volume -1
+exec-if = pgrep -x mpd
+exec = mpc status %volume%
+label = %{T3}%output% %{T-}
+tail = false
 ;click-left = "~/scripts/mpcvol.sh"
 
 [module/polycat]
@@ -246,11 +260,11 @@ icon-repeatone = 󰑘
 icon-single = 󰲡
 icon-consume = ✀
 
-bar-progress-width = 30
+bar-progress-width = 25
 bar-progress-indicator = %{T3}%{T-}
-bar-progress-fill = %{T4}󱘹%{T-}
+bar-progress-fill = %{T4}⏽%{T-}
 bar-progress-fill-foreground = ${macchiato.Sapphire}
-bar-progress-empty = %{T4}󱘹%{T-}
+bar-progress-empty = %{T4}⏽%{T-}
 bar-progress-empty-foreground = ${macchiato.Surface1}
 
 
