--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -150,7 +150,7 @@ ramp-foreground = ${colors.background}
 type = custom/text
 format-padding = 2
 format = 
-format-foreground = ${latte.Flamingo}
+format-foreground = ${macchiato.Rosewater}
 format-background = ${colors.background}
 click-left = "rofi -show drun -config ~/.config/rofi/themes/whisker.rasi"
 ;click-left = "jgmenu_run"
