--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -235,7 +235,7 @@ type = internal/mpd
 
 ; Seconds to sleep between progressbar/song timer sync
 ; Default: 1
-interval = 2
+interval = 4
 format-online = <icon-prev> <icon-stop> <toggle> <icon-next> <bar-progress> <label-time>
 format-online-background = ${colors.background}
 format-offline = <label-offline>
@@ -244,7 +244,8 @@ label-song = %{F#303446}%{T3} %artist% - %title% %{F- T-}
 label-song-background = ${macchiato.Pink}
 label-song-padding = 1
 label-song-maxlen = 110
-label-time = %{T3}%elapsed%/%total% %{T-}
+label-time = %{T3}%total% %{T-}
+;label-time = %{T3}%elapsed%/%total% %{T-}
 label-offline = MPD offline 󰝛
 label-offline-foreground = ${macchiato.Overlay0}
 icon-play = 
@@ -260,7 +261,7 @@ icon-repeatone = 󰑘
 icon-single = 󰲡
 icon-consume = ✀
 
-bar-progress-width = 25
+bar-progress-width = 32
 bar-progress-indicator = %{T3}%{T-}
 bar-progress-fill = %{T4}⏽%{T-}
 bar-progress-fill-foreground = ${macchiato.Sapphire}
