--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,7 @@ set $AtGr Mod5
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:UbuntuSans Nerd Font 10
+#font pango:UbuntuSans Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -50,7 +50,7 @@ exec ~/scripts/xrandr125.sh
 # exec sleep 10 & tint2
 
 # exec sleep 15 & nitrogen --restore
-exec polybar -r -c ~/.config/polybar/i3/config.ini top
+#exec polybar -r -c ~/.config/polybar/i3/config.ini top
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -71,7 +71,7 @@ bindsym $mod+q kill
 # A more modern dmenu replacement is rofi:
 # bindsym $mod+d exec rofi -show drun -font 'Roboto 12' -icon-theme 'Simply-White-Circles' -show-icons
  bindsym $mod+d exec rofi -show drun
- bindsym $Alt+d exec ~/scripts/dmenu.sh
+# bindsym $Alt+d exec ~/scripts/dmenu.sh
  bindsym $Alt+e exec rofimoji
 
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -154,42 +154,6 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-#set $ws6 "6"
-#set $ws7 "7"
-#set $ws8 "8"
-#set $ws9 "9"
-#set $ws10 "10"
-
-# switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-#bindsym $mod+6 workspace number $ws6
-#bindsym $mod+7 workspace number $ws7
-#bindsym $mod+8 workspace number $ws8
-#bindsym $mod+9 workspace number $ws9
-#bindsym $mod+0 workspace number $ws10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-#bindsym $mod+Shift+6 move container to workspace number $ws6
-#bindsym $mod+Shift+7 move container to workspace number $ws7
-#bindsym $mod+Shift+8 move container to workspace number $ws8
-#bindsym $mod+Shift+9 move container to workspace number $ws9
-#bindsym $mod+Shift+0 move container to workspace number $ws10
 
 #Switch to workspace left or right
 bindsym $Alt+Right workspace next
@@ -229,49 +193,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Window Colors
-set $bgcolor #11111b
-
-# Class          <border>  < background>   <text>  <indicator> <child border>
-client.focused     #cdd6f4  #222638        #cdd6f4  #cdd6f4     #cdd6f4
-client.focused_inactive #313244 #313244    #cdd6f4  #313244     #313244
-client.unfocused   #313244  #11111b        #cdd6f4  #313244     #313244
-client.urgent      #d20f39  #d20f39        #eff1f5  #d20f39     #d20f39
-client.placeholder #313244  #11111b        #949cbb  #313244     #313244
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#       position bottom 
-#       status_command i3status
-#       workspace_buttons yes
-#       padding 0 8px
-#       separator_symbol "  "
-#        colors {
-#                background $bgcolor
-#                separator $FDF8C0
-#                statusline #FDF8D0 
-#                focused_workspace $bgcolor #fdf8d0 $bgcolor
-#                active_workspace $bgcolor $bgcolor  #fdf8d0
-#                inactive_workspace $bgcolor $bgcolor #A8ACC0
-#                urgent_workspace #EF6060 $bgcolor #EF6060
-#       }
-# }
-
-# bar {
-#    position top
-#    status_command i3blocks -c ~/.config/i3blocks/config
-#     colors {
-#             background $bgcolor
-#             statusline #fdf8c0
-#            }
-# }
-
-# Set inner/outer gaps
-default_border pixel 2
-default_floating_border normal 1
-title_align center
-hide_edge_borders smart
 # for_window [class="^.*"] border normal 1
 # for_window [class="^.*"] title_format "<span font='Bitsumishi 10'> </span>"
 #for_window [class="vlc"] floating enable
@@ -282,16 +203,6 @@ for_window [class="Sakura"] floating enable
 for_window [class="Conky-manager2"] floating enable
 for_window [class="Plank"] floating enable border pixel 0
 
-assign [class="Chromium"] $ws2
-assign [class="Google-chrome"] $ws2
-assign [class="librewolf"] $ws2
-assign [class="firefox-esr"] $ws2
-assign [class="Zen"] $ws2
-assign [class="TelegramDesktop"] $ws3
-assign [class="vlc"] $ws3
-assign [class="krita"] $ws4
-assign [class="Gimp"] $ws4
-assign [class="mpv"] $ws3
 
 gaps inner 0
 gaps outer 5
@@ -300,3 +211,10 @@ focus_follows_mouse no
 
 # for_window [class="plank" instance="Plank"] floating enable
 # plank floating enable
+
+#Choose a theme color
+ include ~/.config/i3/themes/dark.conf
+# include ~/.config/i3/themes/wxp.conf
+
+#Enable i3bar
+# include ~/.config/i3/bar.conf
