--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -91,7 +91,7 @@ format-underline = ${colors.background}
 type = internal/network
 interface = wlp5s0
 interface-type = wireless
-interval = 4
+interval = 5
 format-connected = <ramp-signal>
 format-connected-background = ${colors.background}
 ;format-connected-padding = 1.5
@@ -111,7 +111,7 @@ ramp-signal-0-foreground = ${macchiato.Overlay0}
 
 [module/temperature]
 type = internal/temperature
-interval = 4
+interval = 5
 thermal-zone = 0
 base-temperature = 10
 warn-temperature = 64
@@ -192,17 +192,17 @@ menu-0-2-padding = 1
 
 [module/mpcvol]
 type = custom/script
-interval = 2
-format = 󰕾<label>
+;interval = 2
+format = 󰕾
 format-foreground = ${macchiato.Yellow}
 format-background = ${colors.background}
 click-left = mpc volume +5
 click-right = mpc volume -5
 ;scroll-up = mpc volume +1
 ;scroll-down = mpc volume -1
-exec-if = pgrep -x mpd
-exec = mpc status %volume%
-label = %{T3}%output% %{T-}
+;exec-if = pgrep -x mpd
+;exec = mpc status %volume%
+;label = %{T3}%output% %{T-}
 tail = false
 ;click-left = "~/scripts/mpcvol.sh"
 
@@ -235,7 +235,7 @@ type = internal/mpd
 
 ; Seconds to sleep between progressbar/song timer sync
 ; Default: 1
-interval = 4
+interval = 5
 format-online = <icon-prev> <icon-stop> <toggle> <icon-next> <bar-progress> <label-time>
 format-online-background = ${colors.background}
 format-offline = <label-offline>
