--- a/.config/polybar/wxp/config.ini
+++ b/.config/polybar/wxp/config.ini
@@ -11,9 +11,10 @@ height = 1px
 font-0 = UbuntuSans Nerd Font:size=12;3
 font-1 = UbuntuSans Nerd Font:italic:bold:size=12;3
 font-2 = UbuntuSans Nerd Font:size=8;2
-font-3 = Symbols Nerd Font:size=28;4
+font-3 = Symbols Nerd Font:size=36;6
 font-4 = UbuntuSans Nerd Font:bold:size=10;3
 font-5 = polycat:size=12;3
+font-6 = DejaVu Sans:italic:bold:size=10;3
 
 
 [bar/top]
@@ -49,12 +50,13 @@ line-size = 3
 background = ${latte.Blue}
 foreground = ${latte.Crust}
 
-modules-left = mainmenu wsxp
+modules-left = mainmenu rborder wsxp
 ;modules-center = ledge i3ws redge
-modules-right = temperature cpu memory wifi pavol systray time
+modules-right = temperature cpu memory wifi pavol systray time pwr-1
 enable-ipc = true
 cursor-click = pointer
 
 [settings]
 screenchange-reload = false
-pseudo-transparency = true
+pseudo-transparency = false
+
