--- a/.config/i3/themes/wxp.conf
+++ b/.config/i3/themes/wxp.conf
@@ -1,6 +1,6 @@
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:UbuntuSans Nerd Font 10
+font pango:UbuntuSans Nerd Font bold 10
 
 # Color palette "Catppuccin Latte"
 set $Rosewater  #dc8a78
@@ -16,6 +16,7 @@ set $Teal  #179299
 set $Sky  #04a5e5
 set $Sapphire  #209fb5
 set $Blue  #1e66f5
+set $LightBlue #b4befe
 set $Lavender  #7287fd
 set $Text  #4c4f69
 set $Subtext1  #5c5f77
@@ -31,19 +32,19 @@ set $Mantle  #e6e9ef
 set $Crust  #dce0e8
 
 # Class                    <border> < background> <text>  <indicator> <child border>
-client.focused             $Blue       $Blue      $Mantle  $Blue      $Blue
-client.focused_inactive    $Surface0   $Surface0  $Text    $Blue      $Blue
-client.unfocused           $Surface0   $Overlay0  $Text    $Blue      $Blue 
+client.focused             $Blue       $Blue      $Base  $Blue      $Blue
+client.focused_inactive    $Lavender   $Lavender  $Text    $Lavender   $Sky
+client.unfocused           $LightBlue  $LightBlue  $Text   $LightBlue  $LightBlue 
 client.urgent              $Red        $Red       $Base    $Red       $Red
-client.placeholder         $Surface1    $Blue      $Base    $Blue      $Blue
+client.placeholder         $Blue    $Blue      $Base    $Blue      $Blue
 
 ### "Set inner/outer gaps"
-default_border normal
-default_floating_border normal 2
+default_border pixel 2
+default_floating_border normal 
 title_align left
 hide_edge_borders smart
 
- exec killall polybar && polybar -r -c ~/.config/polybar/wxp/config.ini bottom
+ exec "killall polybar; polybar -r -c ~/.config/polybar/wxp/config.ini bottom"
 
  bindsym $Alt+d exec ~/scripts/dmenu.sh
 
