--- a/.config/polybar/wxp/modules.ini
+++ b/.config/polybar/wxp/modules.ini
@@ -2,17 +2,18 @@
 [module/systray]
 type = internal/tray
 format = <tray>
-format-padding = 2
+format-padding = 1
 format-background = ${latte.Sky}
-tray-spacing = 4
+tray-spacing = 2
 tray-background = ${latte.Sky}
 
 [module/time]
 type = internal/date
 interval = 1
 format = %{T2}<label>%{T-}
-label-padding = 4
+label-padding = 2
 format-background = ${latte.Sky}
+format-foreground = ${latte.Base}
 time = %H:%M
 label = %time%
 hidden = false
@@ -26,15 +27,20 @@ enable-scroll = false
 icon-default = 
 label-active = %name%
 label-active-padding = 5
-label-active-foreground = ${latte.Mantle}
+label-active-margin = 1px
+label-active-foreground = ${latte.Base}
 label-active-background = #194bf0
 label-occupied = %name%
 label-occupied-padding = 5
-label-occupied-foreground = ${latte.Base}
+label-occupied-margin = 1px
+label-occupied-foreground = ${latte.Surface1}
+label-occupied-background = #194bf0
 label-empty = %name%
 label-empty-foreground = ${macchiato.Overlay2}
 label-empty-padding = 5
 label-urgent = %name%
+label-urgent-padding = 5
+label-urgent-margin = 1px
 label-urgent-foreground = ${latte.Base}
 label-urgent-background = ${latte.Yellow}
 format-font = 5
@@ -57,7 +63,7 @@ label =  %{T3}%percentage%%%{T-}
 
 [module/wifi]
 type = internal/network
-interface = wlp2s0
+interface = wlp5s0
 interface-type = wireless
 interval = 4
 format-connected = <ramp-signal>
@@ -104,20 +110,56 @@ ramp-2 = 
 
 [module/mainmenu]
 type = custom/text
-format-padding = 5
-format =  %{T2}START%{T-} %{F#40a02b}%{B#1e66f5}%{T4}%{F- B- T-}
-
+format-padding = 1
+format =  %{T7}START%{T-}
+;%{F#40a02b}%{B#1e66f5}%{T4}%{F- B- T-}
 format-foreground = ${latte.Mantle}
 format-background = ${latte.Green}
 click-left = "rofi -show drun -config ~/.config/rofi/themes/wxp.rasi"
-;click-left = "jgmenu_run"
+;click-left = "killall jgmenu; jgmenu --config-file=~/.config/jgmenu/wxp/jgmenurc"
 
 [module/pwrmenu]
 type = custom/text
-format-padding = 2
+format-padding = 1
+format-margin =2px
 format = 
-format-background = ${colors.background}
-click-left = "cat .config/jgmenu/menus/pwrmenu | jgmenu --simple --center --icon-size=24"
+format-background = ${latte.Red}
+format-overline = ${latte.Blue}
+format-underline = ${latte.Blue}
+;click-right = "cat .config/jgmenu/menus/pwrmenu | jgmenu --center --icon-size=24"
+click-right = "~/scripts/pwrmenu.sh"
+
+[module/pwr-1]
+type = custom/menu
+expand-right = false
+label-open = 
+label-open-foreground = ${latte.Base} 
+label-open-background = ${latte.Sky}
+label-close =  
+;label-close-background = ${latte.Sky}
+;label-padding = 1
+
+menu-0-0 = %{B#df8e1d}  %{B-}%{T3} Log Out %{T-}
+menu-0-0-exec = "loginctl terminate-session ${XDG_SESSION_ID-}"
+;menu-0-0-background = ${latte.Sky}
+menu-0-0-foreground = ${latte.Base}
+menu-0-0-padding = 1
+menu-0-0-overline = ${latte.Blue}
+menu-0-0-underline = ${latte.Blue}
+
+menu-0-1 = %{B#d20f39} 󰤁 %{B-}%{T3} Power off%{T-}
+menu-0-1-exec = ~/scripts/pwrmenu.sh
+;menu-0-1-background = ${latte.Sky}
+menu-0-1-foreground = ${latte.Base}
+menu-0-1-padding = 1
+menu-0-1-overline = ${latte.Blue}
+menu-0-1-underline = ${latte.Blue}
+
+;menu-0-2 = %{T3}Quit%{T-}
+;menu-0-2-exec = mpd --kill
+;menu-0-2-background = ${colors.background}
+;menu-0-2-foreground = ${macchiato.Red}
+;menu-0-2-padding = 1
 
 
 [module/polycat]
@@ -145,4 +187,10 @@ ramp-volume-2 = 
 label-volume = %{T3}%percentage% %{T-}
 label-muted = x 
 label-muted-foreground = ${macchiato.Overlay0}
+
+[module/rborder]
+type = custom/text
+format = 
+format-foreground = ${latte.Green}
+format-font = 4
 
