--- a/polybar/themes/wxp/modules.ini
+++ b/polybar/themes/wxp/modules.ini
@@ -72,15 +72,15 @@ format-connected-padding = 2
 format-disconnected = <label-disconnected> 
 format-disconnected-padding = 2
 label-disconnected = 󰤭
-label-disconnected-foreground = ${macchiato.Overlay0}
-label-disconnected-background = ${colors.background}
+label-disconnected-foreground = ${latte.Overlay0}
+label-disconnected-background = ${latte.Sky}
 ramp-signal-0 = 󰤮 
 ramp-signal-1 = 󰤯 
 ramp-signal-2 = 󰤟 
 ramp-signal-3 = 󰤢 
 ramp-signal-4 = 󰤥 
 ramp-signal-5 = 󰤨 
-ramp-signal-0-foreground = ${macchiato.Overlay0}
+ramp-signal-0-foreground = ${latte.Overlay0}
 ;ramp-signal-padding = 1
 
 [module/temperature]
@@ -126,7 +126,6 @@ format = 
 format-background = ${latte.Red}
 format-overline = ${latte.Blue}
 format-underline = ${latte.Blue}
-;click-right = "cat .config/jgmenu/menus/pwrmenu | jgmenu --center --icon-size=24"
 click-right = "~/scripts/pwrmenu.sh"
 
 [module/pwr-1]
@@ -137,12 +136,10 @@ label-open-foreground = ${latte.Base}
 label-open-background = ${latte.Sky}
 label-close =  
 label-close-background = ${latte.Sky}
-;label-padding = 1
 format-margin = 1px
 
 menu-0-0 = %{B#df8e1d}  %{B-}%{T3}%{B#04a5e5} Log Out %{T- B-}
 menu-0-0-exec = "loginctl terminate-session ${XDG_SESSION_ID-}"
-;menu-0-0-background = ${latte.Sky}
 menu-0-0-foreground = ${latte.Base}
 menu-0-0-padding = 0
 menu-0-0-overline = ${latte.Sky}
@@ -150,17 +147,10 @@ menu-0-0-underline = ${latte.Sky}
 
 menu-0-1 = %{B#d20f39} 󰤁 %{B-}%{T3}%{B#04a5e5} Power off%{T- B-}
 menu-0-1-exec = ~/scripts/powermenu.sh
-;menu-0-1-background = ${latte.Sky}
 menu-0-1-foreground = ${latte.Base}
 menu-0-1-padding = 0
 menu-0-1-overline = ${latte.Sky}
 menu-0-1-underline = ${latte.Sky}
-
-;menu-0-2 = %{T3}Quit%{T-}
-;menu-0-2-exec = mpd --kill
-;menu-0-2-background = ${colors.background}
-;menu-0-2-foreground = ${macchiato.Red}
-;menu-0-2-padding = 1
 
 
 [module/polycat]
